{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 8,
  "lineage": "27bec8e4-8312-2ae5-9214-c9decae3772e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "internal_server_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.1.1.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-04-04T01:10:34.867-07:00",
            "id": "projects/my-12345-project/regions/us-central1/addresses/prometheus-server-address",
            "name": "prometheus-server-address",
            "network_tier": "PREMIUM",
            "project": "my-12345-project",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/addresses/prometheus-server-address",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/public-subnet"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "3000",
                  "9093",
                  "9090",
                  "9100",
                  "9115"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-04-04T01:10:22.634-07:00",
            "deny": [],
            "description": "rules for external connections, allows http and ssh",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-12345-project/global/firewalls/prometheus-external-fwr",
            "log_config": [],
            "name": "prometheus-external-fwr",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/prometheus-vpc",
            "priority": 1000,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/firewalls/prometheus-external-fwr",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-04-04T01:10:22.647-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-12345-project/global/firewalls/prometheus-internal-fwr",
            "log_config": [],
            "name": "prometheus-internal-fwr",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/prometheus-vpc",
            "priority": 1000,
            "project": "my-12345-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/firewalls/prometheus-internal-fwr",
            "source_ranges": [
              "10.1.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210401",
                    "size": 35,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/disks/prometheus-agent"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "Centos 7 with installed tomcat",
            "enable_display": false,
            "id": "projects/my-12345-project/zones/us-central1-c/instances/prometheus-agent",
            "instance_id": "2041464230334745236",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "Bq27NKFz5IE=",
            "metadata_startup_script": "#!/bin/bash\n\nsudo yum install -y wget\n#download node exporter\nwget https://github.com/prometheus/node_exporter/releases/download/v1.0.1/node_exporter-1.0.1.linux-amd64.tar.gz\ntar -xvzf node_exporter-1.0.1.linux-amd64.tar.gz \nsudo mv node_exporter-1.0.1.linux-amd64 /etc/node_exporter\n\n#create service node-exporter\nsudo tee /etc/systemd/system/node_exporter.service \u003c\u003cEOF\n[Unit]\nDescription=Node Exporter\n[Service]\nExecStart=/etc/node_ex [...]
            "name": "prometheus-agent",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.123.62.104",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/prometheus-vpc",
                "network_ip": "10.1.1.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/public-subnet",
                "subnetwork_project": "my-12345-project"
              }
            ],
            "project": "my-12345-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/instances/prometheus-agent",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210401",
                    "size": 35,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/disks/prometheus-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-12345-project/zones/us-central1-c/instances/prometheus-server",
            "instance_id": "1943134063649147494",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "9ch918MB5jc=",
            "metadata_startup_script": "#!/bin/bash\n#Variables\nhomedir=\"/home/prometheus\"\nnode_ip=\"10.1.1.3:9100\"\nurl=\"http://`curl v4.ifconfig.co`:9090\"\nchange=\"{DS_PROMETHEUS}\"\n\n#install docker and docker-compose\nsudo yum install -y yum-utils\nsudo yum-config-manager \\\n    --add-repo \\\n    https://download.docker.com/linux/centos/docker-ce.repo\nsudo yum install -y docker-ce docker-ce-cli containerd.io docker-compose\nsudo systemctl enable docker\nsudo systemctl start docke [...]
            "name": "prometheus-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.121.140.29",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/prometheus-vpc",
                "network_ip": "10.1.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/public-subnet",
                "subnetwork_project": "my-12345-project"
              }
            ],
            "project": "my-12345-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/zones/us-central1-c/instances/prometheus-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_address.internal_server_address",
            "google_compute_instance.agent",
            "google_compute_network.vpc",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/my-12345-project/global/networks/prometheus-vpc",
            "mtu": 0,
            "name": "prometheus-vpc",
            "project": "my-12345-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/prometheus-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-04-04T01:10:22.799-07:00",
            "gateway_address": "10.1.1.1",
            "id": "projects/my-12345-project/regions/us-central1/subnetworks/public-subnet",
            "ip_cidr_range": "10.1.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/my-12345-project/global/networks/prometheus-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "my-12345-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-12345-project/regions/us-central1/subnetworks/public-subnet"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}